--- a/courses/2015/montpellier/notes-02-hmods.Rmd
+++ b/courses/2015/montpellier/notes-02-hmods.Rmd
@@ -508,44 +508,40 @@ We can easily generalize this to model abundance surveys. The N-mixture model is
 ```r
 set.seed(1234)
 n <- 200
-T <- 1
+T <- 5
 p <- 0.6
 lambda <- 4.2
 N <- rpois(n = n, lambda = lambda)
 Y <- matrix(NA, n, T)
 for (t in 1:T) {
-    Y[,t] <- rbinom(n = n, size = N, prob = pp)
+    Y[,t] <- rbinom(n = n, size = N, prob = p)
 }
-w <- rbinom(n = n, size = y, prob = phi)
-table(Y = y, W = w)
+table(N = N, Y = apply(Y, 1, max))
 ```
-
-Given the data, plot the likelihood contours.
 
 ```r
-## setting up the grid for p and phi
-grid <- expand.grid(p = seq(0, 1, by = 0.01),
-    phi = seq(0, 1, by = 0.01), 
-    L = NA)
-## the likelihood function
-L_fun <- function(w, p, phi) {
-    prod((p * phi)^w * (1 - p * phi)^(1 - w))
-}
-## calculating the likelihood for the grid
-for (i in 1:nrow(grid)) {
-    grid$L[i] <- L_fun(w = w, p = grid$p[i], phi = grid$phi[i])
-}
-## plot the likelihood surface
-dcpal_reds <- colorRampPalette(c("#f9f2f4", "#c7254e"))
-L_mat <- matrix(grid$L, sqrt(nrow(grid)))
-image(L_mat, 
-    ylab = "p", xlab = expression(varphi),
-    col = dcpal_reds(12))
-abline(v = phi, h = p, col = "#f9f2f4", lwd = 3)
-abline(v = phi, h = p, col = "#c7254e", lwd = 1)
-curve((p * phi) / x, 0, 1, add = TRUE, 
-    col = "#18bc9c", lwd = 2)
+library(dclone)
+library(rjags)
+model <- custommodel("model {
+    for (i in 1:n) {
+        N[i] ~ dpois(lambda)
+        for (t in 1:T) {
+            Y[i,t] ~ dbin(p, N[i])
+        }
+    }
+    p ~ dunif(0.001, 0.999)
+    lambda ~ dlnorm(0, 0.001)
+}")
+dat <- list(Y = Y, n = n, T = T)
+ini <- list(N = apply(Y, 1, max) + 1)
+fit <- jags.fit(data = dat, params = c("p", "lambda"), 
+    model = model, inits = ini)
+summary(fit)
+plot(fit)
+pairs(fit)
 ```
+
+
 
 As before it is easy to include covariates in the models. There are various extensions and modifications proposed to this basic model. See Lele et al., Solymos et al, Solymos and Lele, Dail and Madsen. (Here we can advertise our work on single survey method and the poster.)
 
