--- a/courses/2015/montpellier/notes-02-hmods.Rmd
+++ b/courses/2015/montpellier/notes-02-hmods.Rmd
@@ -508,7 +508,7 @@ We can easily generalize this to model abundance surveys. The N-mixture model is
 ```r
 set.seed(1234)
 n <- 200
-T <- 5
+T <- 1
 p <- 0.6
 lambda <- 4.2
 N <- rpois(n = n, lambda = lambda)
@@ -541,7 +541,23 @@ plot(fit)
 pairs(fit)
 ```
 
-
+```r
+ifun <- function(model, n.clones) {
+    dclone(list(N = apply(Y, 1, max) + 1), n.clones)
+}
+dcfit <- dc.fit(data = dat, 
+    params = c("p", "lambda"), model = model,
+    inits = ini, initsfun = ifun,
+    n.clones = c(1, 2, 4, 8), 
+    unchanged = "T", multiply = "n")
+summary(dcfit)
+plot(dcfit)
+dctable(dcfit)
+plot(dctable(dcfit))
+dcdiag(dcfit)
+plot(dcdiag(dcfit))
+pairs(dcfit)
+```
 
 As before it is easy to include covariates in the models. There are various extensions and modifications proposed to this basic model. See Lele et al., Solymos et al, Solymos and Lele, Dail and Madsen. (Here we can advertise our work on single survey method and the poster.)
 
