--- a/courses/2015/montpellier/quickstart.Rmd
+++ b/courses/2015/montpellier/quickstart.Rmd
@@ -12,18 +12,7 @@ course:
   previous: how-to-prepare
 ---
 
-## Key programming principles
-
-* store atomic values (it is easier to combine than to take apart),
-* do not correct raw data, fix the issues on the fly and 
-  and implement safequards,
-* keep things small and modular, recycle code 
-  (most errors are due to copy-pasting and following
-  the changes for each copy),
-* robustness beats efficiency,
-* keep track of version and back up frequently.
-
-## Basic operations in R
+## Basic data structures and operations in R
 
 R is a great calculator:
 
@@ -34,32 +23,33 @@ R is a great calculator:
 Assign a value and print an object:
 
 ```r
-(x = 2)
 print(x)
-x == 2
+(x = 2) # shorthand for print
+x == 2 # logical operator, not assignment
 y <- x + 0.5
-y
+y # another way to print
 ```
 
 Logical operators:
 
 ```r
-x == y
-x != y
-x < y
-x >= y
+x == y # equal
+x != y # not eaqual
+x < y # smaller than
+x >= y # greater than or equal
 ```
 
 Vectors and sequences:
 
 ```r
-x <- c(1,2,3)
+x <- c(1, 2, 3)
 x
 1:3
+seq(1, 3, by = 1)
 
 rep(1, 5)
 rep(1:2, 5)
-rep(1:2, each=5)
+rep(1:2, each = 5)
 ```
 
 Vector operations, recycling:
@@ -73,12 +63,14 @@ Indexing vectors, ordering:
 
 ```r
 x[1]
+x[c(1, 1, 1)] # a wey of repeatig values
 x[1:2]
 x[x != 2]
 x[x == 2]
 x[x > 1 & x < 3]
 order(x, decreasing=TRUE)
 x[order(x, decreasing=TRUE)]
+rev(x) # reverse
 ```
 
 Character vectors, `NA` values, and sorting:
@@ -100,7 +92,7 @@ Matrices and arrays:
 (m <- matrix(1:12, 4, 3))
 matrix(1:12, 4, 3, byrow=TRUE)
 
-array(1:12, c(2,2,3))
+array(1:12, c(2, 2, 3))
 ```
 
 Attribues:
@@ -109,7 +101,7 @@ Attribues:
 dim(m)
 dim(m) <- NULL
 m
-dim(m) <- c(4,3)
+dim(m) <- c(4, 3)
 m
 dimnames(m) <- list(letters[1:4], LETTERS[1:3])
 m
@@ -127,14 +119,14 @@ m[2]
 
 m[rownames(m) == "c",]
 m[rownames(m) != "c",]
-m[rownames(m) %in% c("a","c","e"),]
-m[!(rownames(m) %in% c("a","c","e")),]
+m[rownames(m) %in% c("a", "c", "e"),]
+m[!(rownames(m) %in% c("a", "c", "e")),]
 ```
 
 Lists and indexing:
 
 ```r
-l <- list(m=m, x=x, z=z)
+l <- list(m = m, x = x, z = z)
 l
 l$ddd <- sqrt(l$x)
 l[2:3]
@@ -144,7 +136,7 @@ l[["ddd"]]
 Data frames:
 
 ```r
-d <- data.frame(x=x, sqrtx=sqrt(x))
+d <- data.frame(x = x, sqrt_x = sqrt(x))
 d
 ```
 
@@ -170,8 +162,63 @@ summary(l)
 summary(d)
 ```
 
-Key concepts
+> ### Key concepts
+> 
+> * a matrix is a vector with `dim` attribute, elements are in same mode,
+> * a data frame is a list where length of elements match and elements can be in different mode.
 
-* a matrix is a vector with `dim` attribute, elements are in same mode,
-* a data frame is a list where length of elements match and elements can be in different mode.
+## Random numbers
 
+Random numbers can be generated from a distribution using the
+`r*` functions where the wildcard (`*`) stands for
+the abbreviated name of the distribution, for example
+`rnorm`.
+
+```r
+n <- 1000
+## draw n random numbers from Normal(0, 1)
+hist(rnorm(n, mean = 0, sd = 1))
+## Uniform (not as 'run-if' but as 'r-unif')
+hist(runif(n, min = 0, max = 1))
+## Poisson
+plot(table(rpois(n, lambda = 5)))
+## Binomial
+plot(table(rbinom(n, size = 10, prob = 0.25)))
+```
+
+## MCMC list objects
+
+The coda R package defines MCMC list objects as:
+
+* a list where elements are matrices of identical dimansions,
+* each list stores posterior sample from an MCMC chain, thus the length of the `mcmc.list` object equals the number of parallel chains,
+* each matrix has the dimensions: number of samples (defined by interations and thinning value), and the number of variables monitored.
+* the matrices have some attributes attached to them storing info about the MCMC parameters (start iteration the end iteration and the thinning interval of the chain).
+
+For example if we are monitoring 2 variables, a normally and a uniformly distributed one, the structure might look like this:
+
+```r
+mcmc <- replicate(3, 
+    structure(cbind(a = rnorm(n), b = runif(n)),
+        mcpar = c(1, n, 1), class = "mcmc"),
+    simplify = FALSE)
+class(mcmc) <- "mcmc.list"
+str(mcmc)
+```
+
+Some basic methods for such `mcmc.list` objects are
+defined in the `coda` and `dclone` packages:
+
+```r
+library(dclone)
+summary(mcmc)
+str(as.matrix(mcmc))
+varnames(mcmc)
+start(mcmc)
+end(mcmc)
+thin(mcmc)
+plot(mcmc)
+traceplot(mcmc)
+densplot(mcmc)
+pairs(mcmc)
+```
