--- a/courses/2015/montpellier/about-the-course.Rmd
+++ b/courses/2015/montpellier/about-the-course.Rmd
@@ -4,10 +4,11 @@ author: "Peter Solymos and Subhash Lele"
 output: pdf_document
 layout: course
 course:
-  year: 2015
   location: Montpellier
+  year: 2015
   title: "Hierarchical Models Made Easy &mdash; August 1, 2015 &mdash; Montpellier, France &mdash; ICCB/ECCB Congress"
   lecture: About
+  file: about-the-course
   previous: index
   next: how-to-prepare
 ---
