--- a/courses/2015/montpellier/notes-02-hmods.Rmd
+++ b/courses/2015/montpellier/notes-02-hmods.Rmd
@@ -5,13 +5,15 @@ date: "August 1, 2015 -- Montpellier, France -- ICCB/ECCB Congress"
 output: pdf_document
 layout: course
 course:
-  file: 02-hmods
-  year: 2015
   location: Montpellier
+  year: 2015
   title: "Hierarchical Models Made Easy &mdash; August 1, 2015 &mdash; Montpellier, France &mdash; ICCB/ECCB Congress"
   lecture: Hierarchical models
+  file: 02-hmods
   previous: notes-01-basics
   next: notes-03-pva
+  slides: slides-01-basics.html
+  pdf: notes-01-basics.pdf
 ---
 
 ## Introduction
