file naming more flexible

--- a/courses/2015/montpellier/notes-01-basics.Rmd
+++ b/courses/2015/montpellier/notes-01-basics.Rmd
@@ -9,7 +9,7 @@ course:
   year: 2015
   title: "Hierarchical Models Made Easy &mdash; August 1, 2015 &mdash; Montpellier, France &mdash; ICCB/ECCB Congress"
   lecture: Basics
-  file: 01-basics
+  file: notes-01-basics
   previous: quickstart
   next: notes-02-hmods
   slides: slides-01-basics.html
