--- a/courses/2015/montpellier/apps.Rmd
+++ b/courses/2015/montpellier/apps.Rmd
@@ -27,7 +27,7 @@ install.packages("shiny")
 ```
 
 Once opened, a **Run document** should be visible. Click on that,
-and the app will run through RStudio's built-in web local server.
+and the app will run through RStudio's built-in local web server.
 
 The **html** link leads to a web page that shows the R code used in the app.
 
