--- a/courses/2015/montpellier/how-to-prepare.Rmd
+++ b/courses/2015/montpellier/how-to-prepare.Rmd
@@ -15,22 +15,22 @@ course:
 
 Please follow these steps and install necessary software onto your computer that you are going to use at the course. This way we can spend more time on talking about modeling.
 
-### Install R
+## Install R
 
 Follow the instructions at the [R website](http://cran.r-project.org) to download and install
 the most up-to-date base R version suitable for your operating system (the latest R version at the time of writing these instructions is 3.2.1).
 
-### Install RStudio
+## Install RStudio
 
 Having RStudio is not absolutely necessary, but our course material
 will follow a syntax that is close to RStudio's [R markdown](http://rmarkdown.rstudio.com/)
 notation, so having RStudio will make our life easier. RStudio is also available for different operating systems. Pick the open source descktop edition from [here](http://www.rstudio.com/products/rstudio/download/) (the latest RStudio Desktop version at the time of writing these instructions is 0.99.447).
 
-### Install JAGS
+## Install JAGS
 
 We will use JAGS during the course because it is robust, easy to install, and cross-paltform available. Download the latest version suitable for your operating system from [here](http://sourceforge.net/projects/mcmc-jags/files/JAGS/3.x/) (the latest JAGS version at the time of writing these instructions is 3.4.0).
 
-### Install R packages
+## Install R packages
 
 Once R/RStudio and JAGS is installed, run the following commands in R/RStudio to install the necessary R packages:
 
@@ -38,7 +38,7 @@ Once R/RStudio and JAGS is installed, run the following commands in R/RStudio to
 install.packages(c("rjags","dclone","coda","snow","rlecuyer"))
 ```
 
-### Check that everything works as expected
+## Check that everything works as expected
 
 ```r
 check_if_you_are_ready <-
@@ -82,7 +82,7 @@ Congratulations! Now your computer is ready for the course.
 
 If you still have problems, contact [Péter Sólymos](http://peter.solymos.org#about).
 
-### Optional: install `shiny` for running apps in RStudio
+## Optional: install `shiny` for running apps in RStudio
 
 We will play around with [Shiny](http://shiny.rstudio.com/) apps
 that can be run from within [RStudio](http://www.rstudio.com/).
