--- a/faq.Rmd
+++ b/faq.Rmd
@@ -30,8 +30,8 @@ layout: default
 > ### <i class="fa fa-question-circle"></i> What is the benefit of using data cloning over the Bayesian approach?
 >
 > 1. Results are invariant to the choice of the prior.
-> 2. Identifiability diagnostics comes with the results.
+> 2. Identifiability diagnostics come with the results.
 > 3. Full suite of frequentist approaches can be used,
->   for example conditional-, pseudo-, composite-likelihood.
+>   for example profile-, conditional-, pseudo-, composite-likelihood.
 
 
