--- a/courses/2015/montpellier/notes-02-hmods.Rmd
+++ b/courses/2015/montpellier/notes-02-hmods.Rmd
@@ -658,31 +658,38 @@ dcfit <- dc.fit(data = dat,
     unchanged = c("px", "pz", "pr"), multiply = "n")
 ```
 
-## Negative-Binomial abundance model
-
 ## Continuous case with continuous measurement error (Neyman-Scott problem)
 
 Some historical comments: Fisher and Pearson arguments about MOM and MLE; Fisher and Neyman arguments about testing and p-values. This is an example where Fisher is wrong about consistency and efficiency of the MLE. 
 
-Motivation: 
-Animal breeding example (Linear mixed models): Consider the model underlying one way analysis of variance. 
+### Motivation
 
-    and 
+Animal breeding example (Linear mixed models, LMM): Consider the model underlying one way analysis of variance (ANOVA). 
 
+$$ Y_{ij} = \mu + \alpha_i + \varepsilon_{ij} $$, $i = 1, 2, \ldots, n$ and $j = 1, 2$, 
+$$ \varepsilon_{ij} \sim Normal(0, \sigma_{\varepsilon}^2$$.
 
 There are two offsprings per individual. We want to know something about the genetic potential of the individuals so that we can turn some into hamburgers and some can have fun as studs/dams. 
- 
-Parameters: These are the unknown quantities that we want to learn about from the data. 
-In this model, the parameters are . 
-Number of parameters: (n+2)
-Number of observations: 2n
 
-Question: It is easy to write down the likelihood function. What happens if we compute MLE for these parameters? These are familiar quantities from ANOVA, except for the estimate of the variance. 
+### Parameters
 
+These are the unknown quantities that we want to learn about from the data. In this model, the parameters are 
+($$ \mu, \alpha_1, \alpha_2, \ldots, \alpha_n, \sigma_{\varepsilon}^2$$):
 
+* number of parameters: $n + 2$,
+* number of observations: $2 n$.
 
+### Question
 
-One of the most important results from Neyman and Scott (1949) is that as the sample size increases . It is almost obvious that we cannot estimate  consistently (although it is an unbiased estimator). 
+It is easy to write down the likelihood function. What happens if we compute MLE for these parameters? These are familiar quantities from ANOVA, except for the estimate of the variance. 
+
+$$\hat{\mu} = \frac{1}{2n} \sum_{i=1}^{n} \sum_{j=1}^{2} Y_{ij}$$
+
+$$\hat{\alpha}_{i} = \frac{1}{2} (Y_{i1} + Y_{i2})$$
+
+$$\hat{\sigma}_{\varepsilon}^2 = \frac{1}{2n} \sum_{i=1}^{n} \sum_{j=1}^{2} (Y_{ij} - \hat{\mu} - \hat{\alpha}_{i})^2$$
+
+One of the most important results from Neyman and Scott (1949) is that as the sample size increases, $$\hat{\sigma}_{\varepsilon}^2 \rightarrow \frac{\sigma_{\varepsilon}^2}{2}$$. It is almost obvious that we cannot estimate  consistently (although it is an unbiased estimator). 
 
 
 Moral of the story:
